[package]
name = "app"
version = "0.1.0"
authors = ["keiya01 <keiya.s.0210@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interpreter = { path = "../interpreter" }
yew = { version = "0.17", features = ["services"]}
wasm-bindgen = "0.2.67"
