[package]
name = "repl"
version = "0.1.0"
authors = ["keiya01 <keiya.s.0210@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rsmonkey"
path = "main.rs"

[dependencies]
interpreter = { path = "../interpreter" }
rustyline = "7.0.0"
