[package]
name = "src"
version = "0.1.0"
authors = ["keiya01 <keiya.s.0210@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
name = "rsmonkey"
path = "main.rs"

[dependencies]
rustyline = "7.0.0"
